Update EconomyManager.java